<resources>
    <string name="app_name">Lab7</string>
    
    <string name="Lab">Laboratorio 7</string>
    <string name="signIn">¿Nuevo usuario? ¡Crea tu cuenta aquí!</string>
    <string name="logIn">Iniciar sesión</string>
    <string name="enterEmail">Ingresa tu correo</string>

    <string name="newAccount">Nueva cuenta</string>
    <string name="createAccount">Crear cuenta</string>

    <string name="goodMorning">¡Buenos días!</string>
    <string name="hello">Hola</string>
    <string name="need">¡Necesitamos que actualices tu perfil!</string>
    <string name="email">-</string>
    <string name="updateProfile">Actualizar perfil</string>
    
    <string name="profile">Mi perfil</string>
    <string name="update">Actualizar</string>

    <string name="description">descripcionX</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>