<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_activityMain_Lab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/Lab"
        android:textSize="39sp"
        android:textStyle="bold"

        android:layout_marginBottom="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText

        android:id="@+id/textInput_activityMain_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/enterEmail"
        android:textColor="@color/ligthGray"

        android:layout_marginTop="50dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_activityMain_Lab" />

    <TextView
        android:id="@+id/text_activityMain_singIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/signIn"
        android:textColor="@color/ligthBlue"
        android:textSize="15sp"

        android:layout_marginStart="35dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInput_activityMain_email" />

    <Button
        android:id="@+id/bttn_activityMain_logIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:backgroundTint="@color/bttnColor"
        android:text="@string/logIn"
        android:textColor="@color/white"

        android:layout_marginBottom="250dp"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_activityMain_singIn" />


</androidx.constraintlayout.widget.ConstraintLayout>