<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewAccount">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newAccount"

        android:textSize="45sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInput_newAccount_Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/enterEmail"
        android:textColor="@color/ligthGray"

        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="50dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <Button
        android:id="@+id/bttn_newAccount_singIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/createAccount"
        android:backgroundTint="@color/bttnColor"

        android:layout_marginEnd="35dp"
        android:layout_marginStart="35dp"
        android:layout_marginBottom="320dp"

        app:layout_constraintTop_toBottomOf="@id/textInput_newAccount_Email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>