<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Profile">

    <TextView
        android:id="@+id/text_profile_myProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/profile"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="35sp"

        android:layout_marginTop="35dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInput_newAccount_Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:textColor="@color/ligthGray"

        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="250dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_profile_myProfile"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <Button
        android:id="@+id/bttn_profile_Update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:backgroundTint="@color/bttnColor"
        android:text="@string/update"

        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="50dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageView
        android:id="@+id/image_profile_camera"
        android:layout_width="100dp"
        android:layout_height="100dp"

        android:contentDescription="@string/description"

        android:src="@drawable/camera"

        android:layout_marginTop="25dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_profile_myProfile"/>

</androidx.constraintlayout.widget.ConstraintLayout>